Fix horizontal scroll and add into common file

--- a/FrontEnd/internal-app/src/app/modules/recruitment/components/candidate/pages/list/list.component.css
+++ b/FrontEnd/internal-app/src/app/modules/recruitment/components/candidate/pages/list/list.component.css
@@ -35,18 +35,6 @@ div.candidate div.info {
     width: 235px;
 }
 
-.star::before {
-    font-family: FontAwesome;
-    content: '\f005';
-    color: #71707161;
-}
-
-.star-voted::before {
-    font-family: FontAwesome;
-    content: '\f005';
-    color: #28bb3f;
-}
-
 .search-box {
     background-color: #dee2e6;
     height: -moz-calc(100vh - 120px);
@@ -68,26 +56,10 @@ div.candidate div.info {
 .search-box-skill {
     min-height: 100px;
 }
+
+/*Table css*/
 .table-scroll {
-  width: 100%;
   min-width: 1366px;
-  table-layout: fixed;
-}
-.table-scroll thead,
-.table-scroll body {
-  width: 100%;
-  display: block;
-}
-
-.table-scroll thead tr,
-.table-scroll tbody tr {
-  width: 100%;
-  display: table;
-}
-
-.table-scroll thead tr th,
-.table-scroll tbody tr td {
-    display: table-cell;
 }
 
 .table-scroll thead tr th:nth-child(1),
@@ -151,32 +123,7 @@ div.candidate div.info {
     height: -webkit-calc(100vh - 187px);
     height: -o-calc(100vh - 187px);
     height: calc(100vh - 187px);
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: absolute;
-    width: 99%;
     min-width: 1366px;
 }
 
-.table-scroll tbody::-webkit-scrollbar,
-.table-scroll tbody::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -o-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    width: 3px;
-    height: 3px;
-    background-color: #F5F5F5;
-}
 
-.table-scroll tbody::-webkit-scrollbar {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -o-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    width: 3px;
-    background-color: #138496;
-}
-
-.table-scroll tbody::-webkit-scrollbar-thumb {
-    width: 3px;
-    background-color: #138496;
-}
